--- a/exercise-2/Makefile
+++ b/exercise-2/Makefile
@@ -8,7 +8,7 @@ $(BUILD_FOLDER):
 	mkdir -p $(BUILD_FOLDER)
 
 build/%.out: src/tcp_echo_%.cc
-	g++ -g -std=c++23 $< -o $@
+	g++ -g -O0 -std=c++23 $< -o $@
 
 clean:
 	rm -rf $(BUILD_FOLDER)
