Update readme: Memory Management

--- a/exercise-3/Makefile
+++ b/exercise-3/Makefile
@@ -1,6 +1,8 @@
 SRC_FILES := $(wildcard src/tcp_echo_*.cc)
 OUTPUTS := $(patsubst src/tcp_echo_%.cc, build/%.out, $(SRC_FILES))
 BUILD_FOLDER := build
+CXX_FLAGS := -g -fsanitize=address
+LD_FLAGS := -fsanitize=address
 
 all: $(BUILD_FOLDER) $(OUTPUTS)
 
@@ -8,7 +10,7 @@ $(BUILD_FOLDER):
 	mkdir -p $(BUILD_FOLDER)
 
 build/%.out: src/tcp_echo_%.cc
-	g++ -g -std=c++23 $< -o $@
+	g++ $(CXX_FLAGS) -std=c++23 $< -o $@ $(LD_FLAGS)
 
 clean:
 	rm -rf $(BUILD_FOLDER)
