Remove library flags from Makefile

--- a/exercise-7/Makefile
+++ b/exercise-7/Makefile
@@ -14,9 +14,9 @@ CXXFLAGS += $(CXX_DEBUG_FLAGS)
 # The linker flags. These are passed to the linker when we link our object files together.
 LDFLAGS := -fsanitize=address
 
-LIBS:= fmt spdlog
-LIB_FLAGS := $(addprefix -l,$(LIBS))
-LDFLAGS += $(LIB_FLAGS)
+# LIBS:= fmt spdlog
+# LIB_FLAGS := $(addprefix -l,$(LIBS))
+# LDFLAGS += $(LIB_FLAGS)
 
 BUILD_DIR := build
 SRC_DIR := src
